[gd_scene load_steps=9 format=2]

[ext_resource path="res://pickaxe.gd" type="Script" id=1]
[ext_resource path="res://assets/ingame/object_sprites/pickaxe/pickaxe-1.png" type="Texture" id=2]
[ext_resource path="res://assets/ingame/object_sprites/pickaxe/pickaxe-5.png" type="Texture" id=3]
[ext_resource path="res://assets/ingame/object_sprites/pickaxe/pickaxe-3.png" type="Texture" id=4]
[ext_resource path="res://assets/ingame/object_sprites/pickaxe/pickaxe-4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "anim",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=52]

[sub_resource type="RectangleShape2D" id=53]

[node name="pickaxe" type="KinematicBody2D" groups=["weapons"]]
position = Vector2( -1657, 739 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
script = ExtResource( 1 )

[node name="pickaxe_anim" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 51 )
animation = "anim"

[node name="pickaxe_col" type="CollisionShape2D" parent="."]
shape = SubResource( 52 )
disabled = true

[node name="cooldown_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="teleport_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="pickaxearea" type="Area2D" parent="."]

[node name="pickaxe_col2" type="CollisionShape2D" parent="pickaxearea"]
position = Vector2( 0, 0.000244141 )
shape = SubResource( 53 )

[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="teleport_timer" to="." method="_on_teleport_timer_timeout"]
